--- a/index.html
+++ b/index.html
@@ -165,17 +165,6 @@
     </div>
   </div>
 
-  </div><div class="col-xl-3 col-lg-3 product-card">
-    <img src="https://preview.colorlib.com/theme/cozastore/images/product-10.jpg.webp" alt="Only Check Trouser" class="image">
-    <div class="info">
-      <div class="meta">
-        <p class="title"><a href="#">Only Check Trouser</a></p>
-        <button class="heart-btn"><i class="fa-regular fa-heart"></i></button>
-      </div>
-      <p class="price">$25.50</p>
-    </div>
-  </div>
-
   <div class="col-xl-3 col-lg-3 product-card">
     <img src="https://preview.colorlib.com/theme/cozastore/images/product-11.jpg.webp" alt="Classic Trench Coat" class="image">
     <div class="info">
@@ -184,6 +173,17 @@
         <button class="heart-btn"><i class="fa-regular fa-heart"></i></button>
       </div>
       <p class="price">$75.00</p>
+    </div>
+  </div>
+
+  <div class="col-xl-3 col-lg-3 product-card">
+    <img src="https://preview.colorlib.com/theme/cozastore/images/product-02.jpg.webp" alt="Herschel supply" class="image">
+    <div class="info">
+      <div class="meta">
+        <p class="title"><a href="#">Herschel supply</a></p>
+        <button class="heart-btn"><i class="fa-regular fa-heart"></i></button>
+      </div>
+      <p class="price">$35.31</p>
     </div>
   </div>
 
